--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,6 +12,18 @@
     dest: /etc/dnsmasq.conf
   notify: restart dnsmasq
 
+- name: Gather network facts from all hosts in inventory
+  setup:
+    gather_subset:
+      - '!all'
+      - '!min'
+      - network
+  delegate_to: "{{ item }}"
+  delegate_facts: True
+  loop: "{{ groups['all'] }}"
+  tags:
+    - hosts
+
 - name: Generate /etc/hosts with all hosts from inventory
   template:
     src: hosts.j2
